<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">


        <ImageView
            android:id="@+id/bgdetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/bgdetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />


        <ImageView
            android:id="@+id/img_animal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:rotationY="180"
            android:background="#00000000"
            app:layout_constraintBottom_toBottomOf="@+id/bgdetail"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal"/>

        <ImageView
            android:id="@+id/info_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_infbtn"
            app:layout_constraintBottom_toBottomOf="@id/bgdetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal" />

        <TextView
            android:id="@+id/animal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/coresans_heavy"
            android:text="@string/app_name"
            android:textColor="@color/font_gray2"
            android:textSize="40sp"
            android:lineSpacingExtra="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bgdetail" />

        <TextView
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/now_bold"
            android:text="MAMMALIA"
            android:textColor="@color/font_gray2"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animal_name" />

        <TextView
            android:id="@+id/class_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/class_animal"
            android:textColor="@color/font_gray1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/class_name"/>

        <TextView
            android:id="@+id/orde_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/now_bold"
            android:text="CARNIVORA"
            android:textColor="@color/font_gray2"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/class_name"
            app:layout_constraintTop_toBottomOf="@id/animal_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/orde_animal"
            android:textColor="@color/font_gray1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/orde_name"
            app:layout_constraintTop_toBottomOf="@id/orde_name" />

        <TextView
            android:id="@+id/family_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/now_bold"
            android:text="FELIDAE"
            android:textColor="@color/font_gray2"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/orde_name"
            app:layout_constraintTop_toBottomOf="@id/animal_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/now_medium"
            android:text="@string/family_animal"
            android:textColor="@color/font_gray1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/family_name"
            app:layout_constraintTop_toBottomOf="@id/family_name" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="overviewwuuuuuuu uuuu uuuuu uuuuu uuuuuu uuu uuuu uuuuuuu uuuu uuuuu uuuuuu uuuuuu uuuuuu uuuuu uuuuuuuu u"
            android:fontFamily="@font/now_medium"
            android:textColor="@color/font_gray1"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            app:layout_constraintTop_toBottomOf="@id/class_animal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:id="@+id/repro_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reproduction"
            android:textSize="15sp"
            android:fontFamily="@font/now_bold"
            android:textColor="@color/font_gray2"
            app:layout_constraintTop_toBottomOf="@id/overview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/reproduction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/now_medium"
            android:text="wjhfbcnw wusw efq wif qiuf aweg iaw waefguw eagf we fwe v weuigvwegvu gEGWGVUEG WGE  UVGEFV AWRV"
            android:textColor="@color/font_gray1"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repro_animal" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="59dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
